--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.7.1",
+    "faker": "^6.6.6",
     "react": "^18.0.0",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
