--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.7.1",
+    "date-fns": "^2.28.0",
     "faker": "^6.6.6",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.0.1",
@@ -14,6 +15,7 @@
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
